# first_rust_simple_todo_project

./: .gitignore  Cargo.toml
src/: main.rs
