[package]
name = "todo_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-rt = "2.5.0"
actix-service = "2.0"
sqlx = { version = "0.7.0", features = ["runtime-tokio-rustls", "postgres"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
cargo-watch = "8.5.3"